--- a/stress out shit/body {.css
+++ b/stress out shit/body {.css
@@ -84,11 +84,11 @@ footer {
 .glow-text {
     color: red; /* El color del texto */
     font-weight: bold;
-    text-shadow: 0 0 5px #fff,   /* Resplandor blanco alrededor */
-                 0 0 10px #ff0000,  /* Resplandor rojo cerca */
+    text-shadow: 0 0 5px #fff, 
+                 0 0 10px #ff0000,  
                  0 0 15px #ff0000, 
                  0 0 20px #ff0000, 
                  0 0 25px #ff0000, 
-                 0 0 30px #ff0000;  /* Resplandor más intenso */
-    font-size: 1.5em; /* Ajustar tamaño si lo necesitas */
+                 0 0 30px #ff0000;  
+    font-size: 1.5em; 
 }
